# textual-dissect

./: .gitignore  CHANGELOG.md  README.md  setup.cfg
src/textual_dissect/: app.py
