[metadata]
name = textual-dissect
version = attr: textual_dissect.__version__
author = TomJGooding
description =
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/TomJGooding/textual-dissect
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
python_requires = >=3.9
package_dir =
    = src
packages = find:
install_requires =
    textual >= 1.0.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    textual-dissect = textual_dissect.app:run

[options.extras_require]
dev =
    black
    flake8
    isort
    mypy
    textual-dev
